--- a/model_test/templates/flatpages/default.html
+++ b/model_test/templates/flatpages/default.html
@@ -3,6 +3,7 @@
     <head>
         <title>{% block title %}{% endblock title %}</title>
     </head>
+    <body>
         <!-- Page content-->
         <div class="container">
             <div class="text-center mt-5">
@@ -10,6 +11,5 @@
                 <p>Text</p>
             </div>
         </div>
-
     </body>
 </html>
