--- a/model_test/templates/products.html
+++ b/model_test/templates/products.html
@@ -9,5 +9,34 @@ Products
 <!-- В контенте на странице мы выводим все товары -->
 {% block content %}
 <h1>Все товары</h1>
-{{ products }}
+<h3>{{ time_now|date:'M d Y' }}</h3>
+<!-- Если в переменной next_sale будет None,
+   то выведется указанный в фильтре текст -->
+<h3> {{ next_sale|default_if_none:"Чуть позже сообщим о распродаже!" }} </h3>
+<!-- Выводим товары, только если они есть с помощью тега if -->
+   {% if products %}
+       <table> <!-- Начинаем описывать таблицу -->
+           <tr> <!-- Добавляем строку -->
+               <!-- Добавляем ячейку в строку -->
+               <td> Название </td>
+               <!-- Добавляем ещё одну ячейку в строку и так далее -->
+               <td> Описание </td>
+               <td> Категория </td>
+               <td> Цена </td>
+               <td> Количество </td>
+           </tr> <!-- Не забываем закрыть HTML-тег строки -->
+           {% for product in products %}
+           <tr>
+               <td>{{ product.name }}</td>
+               <td>{{ product.description|truncatechars:15 }}</td>
+               <td>{{ product.category.name }}</td>
+               <td>{{ product.price }}</td>
+               <td>{{ product.quantity }}</td>
+           </tr>
+           {% endfor %}
+       </table> <!-- ... и таблицы -->
+   {% else %}
+       <!-- Если товаров нет, говорим, что товаров нет -->
+       <h2>Товаров нет!</h2>
+   {% endif %}
 {% endblock content %}
