--- a/news/templates/news.html
+++ b/news/templates/news.html
@@ -8,9 +8,27 @@ News
 
 <!-- В контенте на странице мы выводим сам товар, идентификатор которого был передан в url -->
 {% block content %}
-<h1>{{ news }}</h1>
-{% for post in news %}
-    <h2>{{ post.title }}</h2>
-    <p>{{ post.text }}</p>
-{% endfor %}
+<h1> Новости</h1>
+<p>Количество новостей: {{ news|length }}</p>
+{% if news %}
+       <table> <!-- Начинаем описывать таблицу -->
+           <tr> <!-- Добавляем строку -->
+               <!-- Добавляем ячейку в строку -->
+               <td> Заголовок </td>
+               <!-- Добавляем ещё одну ячейку в строку и так далее -->
+               <td> Дата публикации </td>
+               <td> Превью </td>
+           </tr> <!-- Не забываем закрыть HTML-тег строки -->
+           {% for post in news %}
+           <tr>
+               <td>{{ post.title }}</td>
+               <td>{{ post.post_time|date:"d/m/Y" }}</td>
+               <td>{{ product.text|truncatechars:20 }}</td>
+           </tr>
+           {% endfor %}
+       </table> <!-- ... и таблицы -->
+   {% else %}
+       <!-- Если товаров нет, говорим, что товаров нет -->
+       <h2>Новостей нет!</h2>
+   {% endif %}
 {% endblock content %}
