--- a/model_test/templates/products.html
+++ b/model_test/templates/products.html
@@ -1,6 +1,9 @@
 <!--  наследуемся от шаблона default.html, который мы создавали для flatpages -->
 {% extends 'flatpages/default.html' %}
 
+{% load custom_filters %}
+{% load custom_tags %}
+
 <!-- Название у нас будет products -->
 {% block title %}
 Products
@@ -9,7 +12,10 @@ Products
 <!-- В контенте на странице мы выводим все товары -->
 {% block content %}
 <h1>Все товары</h1>
-<h3>{{ time_now|date:'M d Y' }}</h3>
+<!-- Вот так выглядело использование переменной и фильтра -->
+   <!-- <h3>{{ time_now|date:'M d Y' }}</h3> -->
+   <!-- А вот так мы используем наш тег-->
+   <h3>{% current_time '%b %d %Y' %}</h3>
 <!-- Если в переменной next_sale будет None,
    то выведется указанный в фильтре текст -->
 <h3> {{ next_sale|default_if_none:"Чуть позже сообщим о распродаже!" }} </h3>
@@ -30,7 +36,7 @@ Products
                <td>{{ product.name }}</td>
                <td>{{ product.description|truncatechars:15 }}</td>
                <td>{{ product.category.name }}</td>
-               <td>{{ product.price }}</td>
+               <td>{{ product.price|currency }}</td>
                <td>{{ product.quantity }}</td>
            </tr>
            {% endfor %}
