--- a/news/templates/the_news.html
+++ b/news/templates/the_news.html
@@ -1,5 +1,6 @@
 <!--  наследуемся от шаблона default.html, который мы создавали для flatpages -->
 {% extends 'flatpages/default.html' %}
+{% load custom_filters %}
 
 <!-- Название у нас будет Product -->
 {% block title %}
@@ -8,7 +9,8 @@ News
 
 <!-- В контенте на странице мы выводим сам товар, идентификатор которого был передан в url -->
 {% block content %}
-<h1>{{ the_news.title }}</h1>
+<!-- Цензура названия и текста-->
+<h1>{{ the_news.title|censor }}</h1>
 <p>{{ the_news.post_time|date:"d/m/Y" }}</p>
-<p>{{ the_news.text }}</p>
+<p>{{ the_news.text|censor }}</p>
 {% endblock content %}
