--- a/model_test/templates/products.html
+++ b/model_test/templates/products.html
@@ -12,6 +12,7 @@ Products
 <!-- В контенте на странице мы выводим все товары -->
 {% block content %}
 <h1>Все товары</h1>
+<hr>
 <!-- Вот так выглядело использование переменной и фильтра -->
    <!-- <h3>{{ time_now|date:'M d Y' }}</h3> -->
    <!-- А вот так мы используем наш тег-->
@@ -45,4 +46,25 @@ Products
        <!-- Если товаров нет, говорим, что товаров нет -->
        <h2>Товаров нет!</h2>
    {% endif %}
+<!-- Добавляем пагинацию на страницу
+ Информация о предыдущих страницах  -->
+{% if page_obj.has_previous %}
+<a href="?page=1">1</a>
+    {% if page_obj.previous_page_number != 1 %}
+        ...
+        <a href="?page={{ page_obj.previous_page_number }}">{{ page_obj.previous_page_number }}</a>
+    {% endif %}
+{% endif %}
+
+<!-- Информация о текущей странице -->
+{{ page_obj.number }}
+
+<!-- Информация о следующих страницах -->
+{% if page_obj.has_next %}
+    <a href="?page={{ page_obj.next_page_number }}">{{ page_obj.next_page_number }}</a>
+    {% if paginator.num_pages != page_obj.next_page_number %}
+        ...
+        <a href="?page={{ page_obj.paginator.num_pages }}">{{ page_obj.paginator.num_pages }}</a>
+    {% endif %}
+{% endif %}
 {% endblock content %}
