--- a/news/templates/flatpages/default.html
+++ b/news/templates/flatpages/default.html
@@ -7,7 +7,7 @@
         <!-- Page content-->
         <div class="container">
             <div class="text-center mt-5">
-                <p class="lead">{% block content %}TEXT{% endblock content %}</p>
+                <p class="lead">{% block content %}Тут должно было быть что-то{% endblock content %}</p>
                 <p></p>
             </div>
         </div>
