--- a/model_test/templates/flatpages/default.html
+++ b/model_test/templates/flatpages/default.html
@@ -7,8 +7,8 @@
         <!-- Page content-->
         <div class="container">
             <div class="text-center mt-5">
-                <p class="lead">{% block content %}TEXT{% endblock content %}</p>
-                <p>Text</p>
+                <p class="lead">{% block content %}Меня тут не должно быть{% endblock content %}</p>
+                <p>Это дефолт текст</p>
             </div>
         </div>
     </body>
