Добавление формы HTML
Signed-off-by: Tasank <apanasovich04@mail.ru>

--- a/model_test/templates/products.html
+++ b/model_test/templates/products.html
@@ -13,6 +13,13 @@ Products
 {% block content %}
 <h1>Все товары</h1>
 <hr>
+<!-- Добавляем форму, которая объединяет набор полей, которые будут отправляться в запросе -->
+   <form action="" method="get">
+       <!-- Переменная, которую мы передали через контекст, может сгенерировать нам форму с полями -->
+       {{ filterset.form.as_p }}
+       <!-- Добавим кнопку отправки данных формы -->
+       <input type="submit" value="Найти" />
+   </form>
 <!-- Вот так выглядело использование переменной и фильтра -->
    <!-- <h3>{{ time_now|date:'M d Y' }}</h3> -->
    <!-- А вот так мы используем наш тег-->
