--- a/model_test/templates/products.html
+++ b/model_test/templates/products.html
@@ -56,10 +56,10 @@ Products
 <!-- Добавляем пагинацию на страницу
  Информация о предыдущих страницах  -->
 {% if page_obj.has_previous %}
-<a href="?page=1">1</a>
+<a href="?{% url_replace page=1 %}">1</a>
     {% if page_obj.previous_page_number != 1 %}
         ...
-        <a href="?page={{ page_obj.previous_page_number }}">{{ page_obj.previous_page_number }}</a>
+        <a href="?{% url_replace page=page_obj.previous_page_number %}">{{ page_obj.previous_page_number }}</a>
     {% endif %}
 {% endif %}
 
@@ -68,10 +68,10 @@ Products
 
 <!-- Информация о следующих страницах -->
 {% if page_obj.has_next %}
-    <a href="?page={{ page_obj.next_page_number }}">{{ page_obj.next_page_number }}</a>
+    <a href="?{% url_replace page=page_obj.next_page_number %}">{{ page_obj.next_page_number }}</a>
     {% if paginator.num_pages != page_obj.next_page_number %}
         ...
-        <a href="?page={{ page_obj.paginator.num_pages }}">{{ page_obj.paginator.num_pages }}</a>
+        <a href="?{% url_replace page=page_obj.paginator.num_pages %}">{{ page_obj.paginator.num_pages }}</a>
     {% endif %}
 {% endif %}
 {% endblock content %}
