--- a/news/templates/news.html
+++ b/news/templates/news.html
@@ -32,7 +32,7 @@ News
                <td>{{ post.text|truncatechars:20|censor }}</td>
            </tr>
            {% endfor %}
-       </table> <!-- ... и таблицы -->
+       </table>
    {% else %}
        <!-- Если товаров нет, говорим, что товаров нет -->
        <h2>Новостей нет!</h2>
