--- a/news/templates/protect/index.html
+++ b/news/templates/protect/index.html
@@ -4,5 +4,9 @@
 <h2>Страница авторизованного пользователя {{request.user.username}}</h2>
 <div> Здесь может содержаться персональная информация для каждого пользователя </div>
 
-<button> <a href="sign/logout/">Выйти</a> </button>
+<button> <a href="/sign/logout/">Выйти</a> </button>
+{% if is_not_author %}
+<button> <a href="{% url 'upgrade' %}">Стать Автором.</a> </button>
+{% endif %}
+
 {% endblock %}
