--- a/news/templates/news.html
+++ b/news/templates/news.html
@@ -20,7 +20,7 @@ News
            <tr> <!-- Добавляем строку -->
                <!-- Добавляем ячейку в строку -->
                <td> Заголовок </td>
-               <!-- Добавляем ещё одну ячейку в строку и так далее -->
+               <td> Категории </td>
                <td> Дата публикации </td>
                <td> Превью </td>
            </tr> <!-- Не забываем закрыть HTML-тег строки -->
