Подписка на категорию
Signed-off-by: Tasank <apanasovich04@mail.ru>

--- a/news/templates/news.html
+++ b/news/templates/news.html
@@ -8,12 +8,15 @@ News
 
 
 {% block content %}
+{% if is_not_author %}
+    <button><a href="{% url 'upgrade' %}">Стать автором</a></button>
+{% endif %}
 
 <h1> Новости</h1>
 <p>Количество новостей: {{ news|length }}</p>
 <form method="get">
     {{ filterset.form.as_p }}
-    <button type="submit">Поиск</button>
+    <button type="submit">Найти</button>
 </form>
 {% if news %}
        <table> <!-- Начинаем описывать таблицу -->
@@ -27,14 +30,23 @@ News
            {% for post in news %}
            <tr>
                <!-- Цензура названия и превью-->
-               <td>{{ post.title|censor }}</td>
+               <td>
+                   <a href="{% url 'post_detail' post.id %}">{{ post.title|censor }}></a>
+                   <a href="{% url 'news_edit' post.id %}"><u>Редактировать</u></a>
+                   <a href="{% url 'news_delete' post.id %}"><u>Удалить</u></a>
+               </td>
+               <td>
+                   {% for category in post.category.all %}
+                       <a href="{% url 'category_list' category.id %}">{{ category }}</a>
+                   {% endfor %}
+               </td>
+               <!--<td>{{ post.title|censor }}</td>-->
                <td>{{ post.post_time|date:"d/m/Y" }}</td>
                <td>{{ post.text|truncatechars:20|censor }}</td>
            </tr>
            {% endfor %}
        </table>
    {% else %}
-       <!-- Если товаров нет, говорим, что товаров нет -->
        <h2>Новостей нет!</h2>
    {% endif %}
 {% endblock content %}
