--- a/news/templates/main.html
+++ b/news/templates/main.html
@@ -3,8 +3,11 @@
         <title> Simple SignUp/SignIn app</title>
     </head>
     <body>
+
         <div>
+            {% block H1 %}
             <h1><a href="/">Simple SignUp/SignIn app</a></h1>
+            {% endblock %}
         </div>
         {% block content %}
         {% endblock %}
