--- a/news/templates/protect/index.html
+++ b/news/templates/protect/index.html
@@ -1,5 +1,8 @@
 {% extends "main.html" %}
 
+{% block H1 %}
+    <h1><a href="{% url 'post_list' %}">Портал Новостей</a></h1>
+{% endblock %}
 {% block content %}
 <h2>Страница авторизованного пользователя {{request.user.username}}</h2>
 <div> Здесь может содержаться персональная информация для каждого пользователя </div>
