--- a/news/templates/article_detail.html
+++ b/news/templates/article_detail.html
@@ -1,13 +1,16 @@
 {% extends 'flatpages/default.html' %}
 {% load custom_filters %}
-
+{% load cache %}
 {% block title %}
 News
 {% endblock title %}
 
 {% block content %}
 <!-- Цензура названия и текста-->
+{% cache 300 "detail" %}
+<h1><a href="{% url 'post_list' %}">Портал Новостей</a></h1>
 <h1>{{ the_news.title|censor }}</h1>
 <p>{{ the_news.post_time|date:"d/m/Y" }}</p>
 <p>{{ the_news.text|censor }}</p>
+{% endcache %}
 {% endblock content %}
