--- a/news/templates/news_detail.html
+++ b/news/templates/news_detail.html
@@ -1,5 +1,7 @@
 {% extends 'flatpages/default.html' %}
+
 {% load custom_filters %}
+{% load cache %}
 
 {% block title %}
 Новость
@@ -7,7 +9,10 @@
 
 {% block content %}
 <!-- Цензура названия и текста-->
+{% cache 300 "detail" %}
+<h1><a href="{% url 'post_list' %}">Портал Новостей</a></h1>
 <h1>{{ the_news.title|censor }}</h1>
 <p>{{ the_news.post_time|date:"d/m/Y" }}</p>
 <p>{{ the_news.text|censor }}</p>
+{% endcache %}
 {% endblock content %}
