--- a/news/templates/the_news.html
+++ b/news/templates/the_news.html
@@ -7,6 +7,7 @@ News
 {% endblock title %}
 
 {% block content %}
+<h1><a href="{% url 'post_list' %}">Портал Новостей</a></h1>
 <!-- Цензура названия и текста-->
 <h1>{{ the_news.title|censor }}</h1>
 <p>{{ the_news.post_time|date:"d/m/Y" }}</p>
