--- a/news/templates/flatpages/default.html
+++ b/news/templates/flatpages/default.html
@@ -4,6 +4,23 @@
         <title>{% block title %}{% endblock title %}</title>
     </head>
     <body>
+        <!-- Language switcher -->
+        <div class="language-switcher" style="text-align: right; padding: 10px;">
+            <form action="{% url 'set_language' %}" method="post">
+                {% csrf_token %}
+                <input name="next" type="hidden" value="{{ request.path }}">
+                <select name="language" onchange="this.form.submit()">
+                    {% get_current_language as LANGUAGE_CODE %}
+                    {% get_available_languages as LANGUAGES %}
+                    {% for lang in LANGUAGES %}
+                        <option value="{{ lang.0 }}"{% if lang.0 == LANGUAGE_CODE %} selected{% endif %}>
+                            {{ lang.1 }}
+                        </option>
+                    {% endfor %}
+                </select>
+            </form>
+        </div>
+
         <!-- Page content-->
         <div class="container">
             <div class="text-center mt-5">
