--- a/news/templates/news_detail.html
+++ b/news/templates/news_detail.html
@@ -2,6 +2,7 @@
 
 {% load custom_filters %}
 {% load cache %}
+{% load i18n %}
 
 {% block title %}
 Новость
@@ -10,7 +11,7 @@
 {% block content %}
 <!-- Цензура названия и текста-->
 {% cache 300 "detail_cache" %}
-<h1><a href="{% url 'post_list' %}">Портал Новостей</a></h1>
+<h1><a href="{% url 'post_list' %}">{% trans "Портал Новостей" %}!</a></h1>
 <h1>{{ the_news.title|censor }}</h1>
 <p>{{ the_news.post_time|date:"d/m/Y" }}</p>
 <p>{{ the_news.text|censor }}</p>
